syntax = "proto3";

package chat;

option go_package = "github.com/liukai/next-ai-agent-user-backend/gateway/internal/pb/chat";

import "common.proto";

// ─── Session ─────────────────────────────────────────────────────────────────

message Session {
  string id = 1;
  string title = 2;
  string workspace_id = 3;
  string status = 4;
  int32 message_count = 5;
  string last_message_at = 6;
  string created_at = 7;
  bool is_pinned = 8;
  string pinned_at = 9;
}

message ListSessionsRequest {
  string workspace_id = 1;
  common.UserContext user_context = 2;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

message CreateSessionRequest {
  string workspace_id = 1;
  string title = 2;
  common.UserContext user_context = 3;
}

message UpdateSessionRequest {
  string session_id = 1;
  string title = 2;
  bool is_pinned = 3;
  bool update_title = 4;
  bool update_is_pinned = 5;
  common.UserContext user_context = 6;
}

message DeleteSessionRequest {
  string session_id = 1;
  common.UserContext user_context = 2;
}

// ─── Message ─────────────────────────────────────────────────────────────────

message ChatMessage {
  string id = 1;
  string session_id = 2;
  string role = 3;
  string content = 4;
  string agent_id = 5;
  string status = 6;
  string created_at = 7;
}

message ListMessagesRequest {
  string session_id = 1;
  common.UserContext user_context = 2;
  int32 limit = 3;
  string before_message_id = 4;
}

message ListMessagesResponse {
  repeated ChatMessage messages = 1;
  bool has_more = 2;
  string next_before_message_id = 3;
}

message SaveUserMessageRequest {
  string session_id = 1;
  string content = 2;
  common.UserContext user_context = 3;
}

message UpdateUserMessageRequest {
  string session_id = 1;
  string message_id = 2;
  string content = 3;
  common.UserContext user_context = 4;
}

message UpdateUserMessageResponse {
  ChatMessage message = 1;
  repeated string removed_message_ids = 2;
}

message GetRuntimeMetricsRequest {
  string workspace_id = 1;
  int32 days = 2;
  common.UserContext user_context = 3;
}

message RuntimeMetricsDay {
  string date = 1;
  int32 input_tokens = 2;
  int32 output_tokens = 3;
  int32 total_tokens = 4;
  int32 successful_runs = 5;
  int32 failed_runs = 6;
  int32 successful_tasks = 7;
  int32 failed_tasks = 8;
}

message RuntimeAgentMetrics {
  string agent_id = 1;
  string name = 2;
  string role = 3;
  int32 input_tokens = 4;
  int32 output_tokens = 5;
  int32 total_tokens = 6;
  int32 successful_runs = 7;
  int32 failed_runs = 8;
  int32 successful_tasks = 9;
  int32 failed_tasks = 10;
}

message GetRuntimeMetricsResponse {
  int32 total_input_tokens = 1;
  int32 total_output_tokens = 2;
  int32 total_tokens = 3;
  int32 coordinator_input_tokens = 4;
  int32 coordinator_output_tokens = 5;
  int32 coordinator_total_tokens = 6;
  int32 sub_agent_input_tokens = 7;
  int32 sub_agent_output_tokens = 8;
  int32 sub_agent_total_tokens = 9;
  int32 successful_runs = 10;
  int32 failed_runs = 11;
  int32 successful_tasks = 12;
  int32 failed_tasks = 13;
  repeated RuntimeMetricsDay daily = 14;
  repeated RuntimeAgentMetrics agents = 15;
}

message UsageRecord {
  string id = 1;
  string workspace_id = 2;
  string org_id = 3;
  string session_id = 4;
  string run_id = 5;
  string task_id = 6;
  string record_type = 7;
  string scope = 8;
  string status = 9;
  string agent_id = 10;
  string agent_name = 11;
  string agent_role = 12;
  string provider_id = 13;
  string provider_name = 14;
  string model_id = 15;
  string model_name = 16;
  int32 input_tokens = 17;
  int32 output_tokens = 18;
  int32 total_tokens = 19;
  int32 success_count = 20;
  int32 failure_count = 21;
  string started_at = 22;
  string ended_at = 23;
  string recorded_at = 24;
  string metadata_json = 25;
}

message ListUsageRecordsRequest {
  string workspace_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string start_date = 4;
  string end_date = 5;
  common.UserContext user_context = 6;
}

message ListUsageRecordsResponse {
  repeated UsageRecord records = 1;
  int32 total = 2;
  int32 sum_input_tokens = 3;
  int32 sum_output_tokens = 4;
  int32 sum_total_tokens = 5;
  int32 sum_success_count = 6;
  int32 sum_failure_count = 7;
}

message PluginUsageEvent {
  string spec_version = 1;
  string plugin_name = 2;
  string plugin_version = 3;
  string event_id = 4;
  string event_type = 5;
  string timestamp = 6;
  string workspace_id = 7;
  string run_id = 8;
  string status = 9;
  string metrics_json = 10;
  string payload_json = 11;
}

message ReportPluginUsageEventsRequest {
  string workspace_id = 1;
  repeated PluginUsageEvent events = 2;
  common.UserContext user_context = 3;
}

message ReportPluginUsageEventsResponse {
  int32 accepted = 1;
}

message PluginConfigOption {
  string value = 1;
  string label = 2;
}

message PluginConfigField {
  string key = 1;
  string label = 2;
  string type = 3;
  bool required = 4;
  string placeholder = 5;
  string description = 6;
  repeated PluginConfigOption options = 7;
  string default_value_json = 8;
}

message PluginItem {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  string long_description = 5;
  string author = 6;
  string author_avatar = 7;
  string icon = 8;
  string type = 9;
  string version = 10;
  string pricing_model = 11;
  double price = 12;
  double monthly_price = 13;
  int32 trial_days = 14;
  double rating = 15;
  int32 review_count = 16;
  int32 install_count = 17;
  repeated string tags = 18;
  repeated string permissions = 19;
  repeated PluginConfigField config_schema = 20;
  repeated string screenshots = 21;
  string published_at = 22;
  string updated_at = 23;
  string source_type = 24;
  string source_spec = 25;
}

message PluginReview {
  string id = 1;
  string plugin_id = 2;
  string author_name = 3;
  double rating = 4;
  string content = 5;
  string created_at = 6;
}

message WorkspaceInstalledPlugin {
  string id = 1;
  string workspace_id = 2;
  string plugin_id = 3;
  PluginItem plugin = 4;
  string status = 5;
  string config_json = 6;
  string installed_at = 7;
  string installed_by = 8;
}

message ListMarketplacePluginsRequest {
  string type = 1;
  string pricing_model = 2;
  string search = 3;
  string sort = 4;
  int32 page = 5;
  int32 page_size = 6;
  common.UserContext user_context = 7;
}

message ListMarketplacePluginsResponse {
  repeated PluginItem data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

message GetMarketplacePluginRequest {
  string plugin_id = 1;
  common.UserContext user_context = 2;
}

message ListPluginReviewsRequest {
  string plugin_id = 1;
  common.UserContext user_context = 2;
}

message ListPluginReviewsResponse {
  repeated PluginReview reviews = 1;
}

message ListWorkspacePluginsRequest {
  string workspace_id = 1;
  common.UserContext user_context = 2;
}

message ListWorkspacePluginsResponse {
  repeated WorkspaceInstalledPlugin plugins = 1;
}

message InstallWorkspacePluginRequest {
  string workspace_id = 1;
  string plugin_id = 2;
  string config_json = 3;
  string source_type = 4;
  string source_spec = 5;
  bool source_pin = 6;
  common.UserContext user_context = 7;
  string source_integrity = 8;
}

message UpdateWorkspacePluginRequest {
  string workspace_id = 1;
  string plugin_id = 2;
  string status = 3;
  common.UserContext user_context = 4;
}

message UpdateWorkspacePluginConfigRequest {
  string workspace_id = 1;
  string plugin_id = 2;
  string config_json = 3;
  common.UserContext user_context = 4;
}

message UninstallWorkspacePluginRequest {
  string workspace_id = 1;
  string plugin_id = 2;
  common.UserContext user_context = 3;
}

// ─── Agent ───────────────────────────────────────────────────────────────────

message AgentItem {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string role = 4;
  string color = 5;
  string status = 6;
  string model = 7;
  string description = 8;
  string created_at = 9;
  string updated_at = 10;
  string model_id = 11;
  string system_prompt = 12;
  double temperature = 13;
  string output_format = 14;
  repeated string tools = 15;
  repeated string knowledge_bases = 16;
}

message ListAgentsRequest {
  string workspace_id = 1;
  common.UserContext user_context = 2;
}

message ListAgentsResponse {
  repeated AgentItem agents = 1;
}

message CreateAgentRequest {
  string workspace_id = 1;
  string name = 2;
  string role = 3;
  string model = 4;
  string color = 5;
  string description = 6;
  string system_prompt = 7;
  common.UserContext user_context = 8;
  string model_id = 9;
  double temperature = 10;
  string output_format = 11;
  repeated string tools = 12;
  repeated string knowledge_bases = 13;
}

message GetAgentRequest {
  string id = 1;
  common.UserContext user_context = 2;
}

message UpdateAgentRequest {
  string id = 1;
  string name = 2;
  string role = 3;
  string model = 4;
  string model_id = 5;
  string color = 6;
  string description = 7;
  string system_prompt = 8;
  double temperature = 9;
  string output_format = 10;
  repeated string tools = 11;
  repeated string knowledge_bases = 12;
  common.UserContext user_context = 13;
}

message DeleteAgentRequest {
  string id = 1;
  common.UserContext user_context = 2;
}

// ─── Service ─────────────────────────────────────────────────────────────────

service ChatService {
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc CreateSession(CreateSessionRequest) returns (Session);
  rpc UpdateSession(UpdateSessionRequest) returns (Session);
  rpc DeleteSession(DeleteSessionRequest) returns (common.Empty);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  rpc SaveUserMessage(SaveUserMessageRequest) returns (ChatMessage);
  rpc UpdateUserMessage(UpdateUserMessageRequest) returns (UpdateUserMessageResponse);
  rpc GetRuntimeMetrics(GetRuntimeMetricsRequest) returns (GetRuntimeMetricsResponse);
  rpc ListUsageRecords(ListUsageRecordsRequest) returns (ListUsageRecordsResponse);
  rpc ReportPluginUsageEvents(ReportPluginUsageEventsRequest) returns (ReportPluginUsageEventsResponse);
  rpc ListMarketplacePlugins(ListMarketplacePluginsRequest) returns (ListMarketplacePluginsResponse);
  rpc GetMarketplacePlugin(GetMarketplacePluginRequest) returns (PluginItem);
  rpc ListPluginReviews(ListPluginReviewsRequest) returns (ListPluginReviewsResponse);
  rpc ListWorkspacePlugins(ListWorkspacePluginsRequest) returns (ListWorkspacePluginsResponse);
  rpc InstallWorkspacePlugin(InstallWorkspacePluginRequest) returns (WorkspaceInstalledPlugin);
  rpc UpdateWorkspacePlugin(UpdateWorkspacePluginRequest) returns (WorkspaceInstalledPlugin);
  rpc UpdateWorkspacePluginConfig(UpdateWorkspacePluginConfigRequest) returns (WorkspaceInstalledPlugin);
  rpc UninstallWorkspacePlugin(UninstallWorkspacePluginRequest) returns (common.Empty);
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
  rpc CreateAgent(CreateAgentRequest) returns (AgentItem);
  rpc GetAgent(GetAgentRequest) returns (AgentItem);
  rpc UpdateAgent(UpdateAgentRequest) returns (AgentItem);
  rpc DeleteAgent(DeleteAgentRequest) returns (common.Empty);
}
